--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,8 @@ body {
 
 .search-box {
     margin: 20px 20px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .search-box input {
